f possibly fixed dropdown zindex on safari

--- a/frontend/src/components/UserProfile/UserProfile.module.css
+++ b/frontend/src/components/UserProfile/UserProfile.module.css
@@ -118,6 +118,9 @@
 .dropdownActive {
   top: 5rem;
   opacity: 1;
+
+  z-index: 101;
+  transform: translateZ(1px);
 }
 
 @media screen and (max-width: 800px) {
